  term query and fuzzy query. (Rafał Harabień)

* GITHUB#15434: Don't override boost of conflicting expanded phrases by taking the max boost in markTerminal for FVHighlighter (Luana Fragoso)

* GITHUB#12561: UAX29URLEmailTokenizer matched emails with commas and invalid
  periods in the local part. (Eran Yarkon)

Changes in Runtime Behavior
---------------------
* GITHUB#14187: The query cache is now disabled by default. (Adrien Grand)

Build
---------------------
* GITHUB#15327: New low-level build options to detect abuse of LuceneTestCase.random():
  tests.random.maxacquires and tests.random.maxcalls (Robert Muir, Dawid Weiss)

* GITHUB#15325: Run the tests with assertions disabled ~25% of the time #15325
  (Robert Muir, Dawid Weiss)

* GITHUB#14804: Detect and ban wildcard imports in Java (Robert Muir, Dawid Weiss)

* GITHUB#14808: Add support for validating sources using ast-grep tool rules #14808
  (Robert Muir, Dawid Weiss)

* GITHUB#15629: Introduce prek for fast pre-commit/repository checks.
  Markdown files are now linted with local broken-link detection.
  Python and Shell scripts are now linted system-wide.
  Install with `uvx prek install`
  For more see help/precommit.txt or `./gradlew helpPrecommit` (Robert Muir)

Other
---------------------

* GITHUB#14801: Removed all security manager and java.security-related code, which is effectively dead
  in Java 24+. (Dawid Weiss)

* GITHUB#14229: Bump minimum required Java version to 25

* GITHUB#14564: Remove abstractions from MMapDirectory as we need no MR-JAR anymore.  (Uwe Schindler)

* GITHUB#14613: Rewrite APIJAR extractor to use Java 24 classfile API and kill ASM dependency also for build system.  (Uwe Schindler)

* GITHUB#14705: Use Comparators for some PriorityQueue implementations. (Simon Cooper)
* GITHUB#14761: Use more Comparators for PriorityQueue implementations. (Simon Cooper)
* GITHUB#14817: Refactor some complex uses of PriorityQueue to use Comparators. (Simon Cooper)
